--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,11 @@
+YAML
 # Comments are provided throughout this file to help you get started.
 # If you need more help, visit the Docker compose reference guide at
 # https://docs.docker.com/compose/compose-file/
 
-# Here the instructions define your application as two services called "todo-app" and “todo-database”
-# The service “todo-app” is built from the Dockerfile in the /app directory,
-# and the service “todo-database” uses the official MongoDB image 
-# from Docker Hub - https://hub.docker.com/_/mongo. 
-# You can add other services your application may depend on here.
+# Define your application as two services called "todo-app" and "todo-database"
+
+version: "3.9"
 
 services:
   todo-app:
@@ -17,8 +16,8 @@ services:
     environment:
       NODE_ENV: production
     ports:
-      - 3000:3000
-      - 35729:35729
+      - "3000:3000"
+      - "35729:35729"
     develop:
       watch:
         - path: ./app/package.json
@@ -29,10 +28,5 @@ services:
 
   todo-database:
     image: mongo:6
-    #volumes: 
-    #  - database:/data/db
     ports:
-      - 27017:27017
-
-#volumes:
-  #database:
+      - "27017:27017"
